@@ -842,11 +842,27 @@ ProjectWindow::MessageReceived(BMessage *msg)
 		case M_REMOVE_FILES:
 		{
 			bool save = false;
+			
+			bool removeFromSCM = false;
+			if (fProjectList->CountItems() > 0 && fSourceControl)
+			{
+				BAlert *alert = new BAlert("Paladin", "Would you like to also remove these "
+													"files from source control?", "No", "Yes");
+				if (alert->Go() == 1)
+					removeFromSCM = true;
+			}
+			
 			for (int32 i = 0; i < fProjectList->CountItems(); i++)
 			{
 				SourceFileItem *item = dynamic_cast<SourceFileItem*>(fProjectList->ItemAt(i));
 				if (item && item->IsSelected())
 				{
+					if (removeFromSCM)
+					{
+						fSourceControl->RemoveFromRepository(
+													item->GetData()->GetPath().GetFullPath());
+					}
+					
 					fProjectList->RemoveItem(item);
 					fProject->RemoveFile(item->GetData());
 					delete item;
@@ -1759,6 +1775,15 @@ ProjectWindow::AddFileThread(void *data)
 {
 	add_file_struct *addstruct = (add_file_struct*)data;
 	
+	bool addToSCM = false;
+	if (addstruct->parent->fSourceControl)
+	{
+		BAlert *alert = new BAlert("Paladin", "Would you like to also add these files to "
+												"source control?", "No", "Yes");
+		if (alert->Go() == 1)
+			addToSCM = true;
+	}
+	
 	int32 i = 0;
 	entry_ref addref;
 	while (addstruct->refmsg.FindRef("refs",i,&addref) == B_OK)
@@ -1775,14 +1800,22 @@ ProjectWindow::AddFileThread(void *data)
 		}
 		
 		BEntry entry(&addref);
+		DPath path(addref);
 		if (entry.IsDirectory())
+		{
 			addstruct->parent->AddFolder(addref);
+			if (addToSCM)
+				addstruct->parent->fSourceControl->AddToRepository(path.GetFullPath());
+		}
 		else
 		{
 			addstruct->parent->Lock();
 			addstruct->parent->AddFile(addref,&addstruct->droppt);
+			if (addToSCM)
+				addstruct->parent->fSourceControl->AddToRepository(path.GetFullPath());
 			addstruct->parent->Unlock();
 		}
+		
 		i++;
 	}
 	
